# NPuzzle

./: CMakeLists.txt  Makefile  generator.py
examples/: puzzle_10_s  puzzle_10_u  puzzle_3_s  puzzle_3_u  puzzle_4_s  puzzle_4_u  puzzle_5_s  puzzle_5_u  puzzle_invalid
headers/: Board.h  CommonHeader.h  CommonTools.h  Drawer.h  IDrawer.h  Logger.h  Parser.h  Solver.h
sources/: Board.cpp  CommonTools.cpp  Drawer.cpp  Logger.cpp  Parser.cpp  Solver.cpp  main.cpp
